third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-time/hour-over.stderr
TOML parse error at line 2, column 7
  |
2 | d = 24:00:00
  |       ^
expected newline, `#`
